--- a/ClubManagementSystem/ClubManagementSystem.csproj
+++ b/ClubManagementSystem/ClubManagementSystem.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BAL\BaseBAO.cs" />
+    <Compile Include="BAL\GroupAgeBLO.cs" />
     <Compile Include="BAL\Security\RoleBAO.cs" />
     <Compile Include="Migrations\201703081125294_Init.cs" />
     <Compile Include="Migrations\201703081125294_Init.Designer.cs">
