--- a/ClubManagementSystem/ClubManagementSystem.csproj
+++ b/ClubManagementSystem/ClubManagementSystem.csproj
@@ -69,7 +69,11 @@
     <Compile Include="DAL\LovalDB.cs" />
     <Compile Include="DAL\Configuration.cs" />
     <Compile Include="DAL\ModelContext.cs" />
+    <Compile Include="Entities\EducationLevel.cs" />
     <Compile Include="Entities\GroupAge.cs" />
+    <Compile Include="Entities\Resources\EducationLevel\EducationLevel.ar.Designer.cs" />
+    <Compile Include="Entities\Resources\EducationLevel\EducationLevel.Designer.cs" />
+    <Compile Include="Entities\Resources\EducationLevel\EducationLevel.fr.Designer.cs" />
     <Compile Include="Entities\Resources\GroupAge\GroupAge.ar.Designer.cs">
       <DependentUpon>GroupAge.ar.resx</DependentUpon>
       <AutoGen>True</AutoGen>
@@ -93,6 +97,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Entities\Resources\EducationLevel\EducationLevel.ar.resx" />
+    <EmbeddedResource Include="Entities\Resources\EducationLevel\EducationLevel.fr.resx" />
+    <EmbeddedResource Include="Entities\Resources\EducationLevel\EducationLevel.resx" />
     <EmbeddedResource Include="Entities\Resources\GroupAge\GroupAge.ar.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>GroupAge.ar.Designer.cs</LastGenOutput>
@@ -139,6 +146,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Migrations\" />
+    <Folder Include="Presentation\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
