--- a/ClubManagementSystemTests/ClubManagementSystemTests.csproj
+++ b/ClubManagementSystemTests/ClubManagementSystemTests.csproj
@@ -8,7 +8,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ClubManagementSystemTests</RootNamespace>
     <AssemblyName>ClubManagementSystemTests</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -40,9 +40,14 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Gwin Library\GwinApp.dll</HintPath>
     </Reference>
-    <Reference Include="GwinField, Version=0.0.0.3, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Gwin Library\GwinField.dll</HintPath>
+    <Reference Include="MetroFramework">
+      <HintPath>..\packages\Gwin Library\MetroFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="MetroFramework.Design">
+      <HintPath>..\packages\Gwin Library\MetroFramework.Design.dll</HintPath>
+    </Reference>
+    <Reference Include="MetroFramework.Fonts">
+      <HintPath>..\packages\Gwin Library\MetroFramework.Fonts.dll</HintPath>
     </Reference>
     <Reference Include="System" />
   </ItemGroup>
